@@ -2,6 +2,9 @@
            VERSION 3.3.3
 ------------------------------------
 
+Features & Enhancements:
+* Exceptions aren't wrapped by PrettyFilter anymore
+
 Bugfixes:
 * Fixed potential NullPointerException in annotation scanning code 
 * Fixed PrettyContext.JSESSIONID_REGEX to support clustered session IDs
